--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # Ignore everything
 *
 .*
-!.gitignore
-!.git
 
 # Except the following
+!alacritty
+!btop
+!wlogout
+!swaylock
+!swaync
 !neofetch
 !waybar
 !hypr
