--- a/hypr/UserConfigs/LaptopDisplay.conf
+++ b/hypr/UserConfigs/LaptopDisplay.conf
@@ -1,4 +1,6 @@
 # NOTE, THIS FILE IS BEING USED by disabling Laptop display monitor behaviour when closing lid.
 # See notes on Laptops.conf
 
-#monitor = eDP-1, preferred, auto, 1
+monitor = eDP-1, 1920x1080@60hz, 0x0, 1.2
+# offset => 1920 x 1.2 == 2304
+monitor = ,preferred, 2304x0, 1,mirror, eDP-1
