--- a/hypr/UserConfigs/Monitors.conf
+++ b/hypr/UserConfigs/Monitors.conf
@@ -7,11 +7,11 @@
 
 ## Monitors
 # Main Monitor
-monitor=DP-3, 2560x1440@166.80, 0x0, 1.25
-workspace=1, monitor:DP-3, default:true
+# monitor=DP-3, 2560x1440@166.80, 0x0, 1.25
+# workspace=1, monitor:DP-3, default:true
 
 # Secondary Monitor
-monitor=HDMI-A-1, 1920x1080@60, auto, 1
+# monitor=HDMI-A-1, 1920x1080@60, auto, 1
 
 # NOTE: for laptop, kindly check notes in Laptops.conf regarding display
 # Created this inorder for the monitor display to not wake up if not intended.
