--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -18,7 +18,7 @@ background {
 # GENERAL
 general {
     no_fade_in = false
-    grace = 90 # require password after 15 minutes
+    # grace = 300 # require password after 5 minutes
     disable_loading_bar = true
 }
 
