--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,13 +1,14 @@
 live_config_reload = true
 
-# Line 5 should not be changed without updating nvim config
 [window]
-padding = { x = 12, y = 15 }
+padding = { x = 5, y = 5 }
 
 [scrolling]
 multiplier = 1
 
 [font]
 normal = { family = "FiraCode Nerd Font Mono", style = "Regular" }
-size = 12
+size = 11.5
 
+[mouse]
+hide_when_typing = true
