--- a/hypr/UserConfigs/UserKeybinds.conf
+++ b/hypr/UserConfigs/UserKeybinds.conf
@@ -13,13 +13,14 @@ $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
 
 # rofi App launcher
-bindr = $mainMod, $mainMod_L, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window
+# bindr = $mainMod, $mainMod_L, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window
 bind = $mainMod, space, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window
 
-bind = $mainMod, Return, exec, $term  # Launch terminal
+bind = $mainMod, Return, exec, $term
 bind = $mainMod, D, exec, $files
 bind = $mainMod, J, exec, $browser
-
+unbind = $mainMod, P
+bind = $mainMod, P, exec, $UserScripts/Projection.sh
 
 
 
