--- a/hypr/UserConfigs/WindowRules.conf
+++ b/hypr/UserConfigs/WindowRules.conf
@@ -22,37 +22,39 @@ windowrule = float, ^(file-roller)$ # archive manager
 windowrule = center,^(pavucontrol) 
 
 # windowrule v2
-windowrulev2 = workspace 1, class:^([Tt]hunderbird)$
-windowrulev2 = workspace 2, class:^([Ff]irefox)$
-windowrulev2 = workspace 2, class:^(org.mozilla.firefox)$
-windowrulev2 = workspace 2, class:^([Ff]irefox-esr)$
-windowrulev2 = workspace 2, class:^(Microsoft-edge-beta)$ 
-windowrulev2 = workspace 3, class:^([Tt]hunar)$
-windowrulev2 = workspace 4, class:^(com.obsproject.Studio)$
-windowrulev2 = workspace 5 silent, class:^([Ss]team)$,title:^([Ss]team)$
-windowrulev2 = workspace 5 silent, class:^(lutris)$
-windowrulev2 = workspace 6, class:^(virt-manager)$
-windowrulev2 = workspace 7 silent, class:^(discord)$
-windowrulev2 = workspace 7 silent, class:^(WebCord)$
-windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
+# windowrulev2 = workspace 1, class:^([Tt]hunderbird)$
+# windowrulev2 = workspace 2, class:^([Ff]irefox)$
+# windowrulev2 = workspace 2, class:^(org.mozilla.firefox)$
+# windowrulev2 = workspace 2, class:^([Ff]irefox-esr)$
+# windowrulev2 = workspace 2, class:^(Microsoft-edge-beta)$ 
+# windowrulev2 = workspace 3, class:^([Tt]hunar)$
+# windowrulev2 = workspace 4, class:^(com.obsproject.Studio)$
+# windowrulev2 = workspace 5 silent, class:^([Ss]team)$,title:^([Ss]team)$
+# windowrulev2 = workspace 5 silent, class:^(lutris)$
+# windowrulev2 = workspace 6, class:^(virt-manager)$
+# windowrulev2 = workspace 7 silent, class:^(discord)$
+# windowrulev2 = workspace 7 silent, class:^(WebCord)$
+# windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
 
 #opacity (transparent) #enable as desired
 windowrulev2 = opacity 0.95 0.95, class:^([Ff]irefox)$
 windowrulev2 = opacity 0.95 0.95, class:^(Alacritty)$
+windowrulev2 = opacity 0.95 0.95, class:^(Spotify)$
 
+windowrulev2=opacity 1.00 1.00,title:^(Picture-in-Picture)$ # for opacity: [focus num] [bg num]
+windowrulev2=pin,title:^(Picture-in-Picture)$ 
+windowrulev2=float, title:^(Picture-in-Picture)$
+windowrulev2=size 30% 30%,title:^(Picture-in-Picture)$ 
+windowrulev2=move 67% 65%,title:^(Picture-in-Picture)$ 
+windowrulev2=keepaspectratio,title:^(Picture-in-Picture)$ 
 #windowrulev2 = bordercolor rgb(EE4B55) rgb(880808), fullscreen:1
 #windowrulev2 = bordercolor rgb(282737) rgb(1E1D2D), floating:1
 #windowrulev2 = opacity 0.8 0.8, pinned:1
 
 # Picture-in-a-Picture (PIP) rules: Oddly, some need re-duplication.  This is because the window for
 # PIP changes after on first launch, and will not inherant the rules...
-windowrulev2=opacity 1.00 1.00,title:^(Picture-in-Picture)$ # for opacity: [focus num] [bg num]
 # Interestingly, the opacity rule above doesn't need the reduplication?
-windowrulev2=pin,title:^(Picture-in-Picture)$ 
 #windowrulev2=pin,title:^(Firefox)$ 
-windowrulev2=float, title:^(Picture-in-Picture)$
 #windowrulev2=float, title:^(Firefox)$
-windowrulev2=size 25% 25%,title:^(Picture-in-Picture)$ 
 #windowrulev2=size 25% 25%,title:^(Firefox)$ 
-windowrulev2=move 72% 7%,title:^(Picture-in-Picture)$ 
 #windowrulev2=move 72% 7%,title:^(Firefox)$ 
